# NewsClustering

./: AbstractItemAgrupable.cpp  AbstractItemAgrupable.h  AgrupadorDeGrupos.cpp  AgrupadorDeGrupos.h  AgrupadorDeGruposTest.cpp  AgrupadorDeItems.cpp  AgrupadorDeItems.h  AgrupadorDeItemsTest.cpp  Analizador.cpp  Analizador.h  AnalizadorTest.cpp  CMakeLists.txt  CriterioDeAgrupacion.h  CriterioDeAgrupacionMock.h  EntidadNombrada.h  EntidadNombradaTest.cpp  FindEntidadMasNombradaByNameFunc.cpp  GroupingJsonSerializer.cpp  GroupingJsonSerializer.h  GroupingJsonSerializerTest.cpp  ItemAgrupable.h  ItemAgrupableMock.h  JsonParser.cpp  JsonParser.h  Main.cpp  Noticia.cpp  Noticia.h  NoticiaFolderReader.cpp  NoticiaFolderReader.h  NoticiaIf.h  NoticiaIfMock.h  NoticiaJsonParser.cpp  NoticiaJsonParser.h  NoticiaJsonParserTest.cpp  NoticiaParser.cpp  NoticiaParser.h  NoticiaParserTest.cpp  NoticiaPlainTextParser.cpp  NoticiaPlainTextParser.h  NoticiaPlainTextParserTest.cpp  (+20 more)
data/: ES_stopList.txt
docker/base/: Dockerfile
docker/user_specific/: Dockerfile
plantuml/: classes_1.uml  classes_2.uml  classes_3.uml  classes_3b.uml  classes_4.uml  classes_5.uml  classes_6.uml
